# Americano

./: .editorconfig  .env.example  .gitignore  .kilocodemodes  .markdown-link-check.json  .markdownlint.json  .mcp.json  .vale.ini  AGENTS.MD  ALGORITHM_VALIDATION_REPORT.md  BACKEND-FIXES-QUICK-REFERENCE.md  BUILD_VALIDATION_SUMMARY.md  BURNOUT-RISK-ARCHITECTURE.md  BURNOUT-RISK-IMPLEMENTATION-SUMMARY.md  CACHE-IMPLEMENTATION-SUMMARY.md  CHANGELOG.md  CLAUDE.md  CO-OCCURRENCE-PERFORMANCE-TEST-REPORT.md  CODE-COMPARISON.md  COGNITIVE_LOAD_API_IMPLEMENTATION.md  COGNITIVE_LOAD_DEPLOYMENT_GUIDE.md  COGNITIVE_LOAD_IMPLEMENTATION_SUMMARY.md  COGNITIVE_LOAD_SCHEMA_PROPOSAL.md  COMPARISON-ENDPOINT-IMPLEMENTATION-SUMMARY.md  COMPONENT_INTEGRATION_EXAMPLES.md  COMPREHENSIVE-TEST-REPORT.md  CONTRIBUTING.md  COOCCURRENCE-OPTIMIZATION.md  DASHBOARD-ENDPOINT-IMPLEMENTATION-SUMMARY.md  DATABASE-SCHEMA-FIX-2025-10-20.md  DATABASE_SCHEMA_VALIDATION_REPORT.md  DATABASE_VERIFICATION_COMPLETE.txt  DELIVERABLE-SQL-SCHEMAS.md  DELIVERABLES.md  DESIGN-SYSTEM-AUDIT-EPIC4.md  DOCUMENTATION-COMPLETE-REPORT.md  DX_SETUP_COMPLETE.md  E2E-TEST-QUICK-START.md  EMBEDDING-SERVICE-RETRY-ENHANCEMENT.md  EPIC-3-4-MERGE-ANALYSIS.md  (+258 more)
apps/ml-service/: .env  .env.example  DEPRECATED.md  IMPLEMENTATION_SUMMARY.md  MODEL_TRAINING_GUIDE.md  QUICKSTART.md  README.md  STORY-5.5-TASK-9-MAB-SUMMARY.md  TEST-SUITE-SUMMARY.md  coverage.json  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  start-ml-service.sh  start.sh
apps/ml-service/app/: __init__.py  main.py
apps/ml-service/tests/: README.md  (+12 more)
(+1908 files in other folders)
